# angle

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE-ANDROID  LICENSE-JANGLE  README.md  config.cmake  pom.xml
.github/workflows/: main.yml
include/: commit.h
scripts/glgen/: gen
scripts/glgen/static/egl/: JNIHelp.java
scripts/glgen/stubs/egl/: EGL14Header.java-if  EGL14cHeader.cpp  EGL15cHeader.cpp  EGLExtcHeader.cpp  eglCreatePbufferFromClientBuffer.cpp  eglCreateWindowSurface.cpp  eglCreateWindowSurface.java  eglCreateWindowSurface.nativeReg
scripts/glgen/stubs/gles11/: GLES10ExtcHeader.cpp  GLES20Header.java-if  GLES30Header.java-if  GLES31cHeader.cpp  GLES32cHeader.cpp  common.cpp  glGetActiveUniform.java  glGetDebugMessageLog.cpp  glGetDebugMessageLogKHR.cpp  glGetTransformFeedbackVarying.java
scripts/glgen/stubs/jsr239/: GLCHeader.cpp
src/android.opengl/android.opengl/C/: android_opengl_EGL14.cpp  android_opengl_EGL15.cpp  android_opengl_EGLExt.cpp  android_opengl_GLES10.cpp  android_opengl_GLES10Ext.cpp  android_opengl_GLES11.cpp  android_opengl_GLES11Ext.cpp  android_opengl_GLES20.cpp  android_opengl_GLES30.cpp  android_opengl_GLES31.cpp  android_opengl_GLES31Ext.cpp  android_opengl_GLES32.cpp  com_google_android_gles_jni_GLImpl.cpp
src/android.opengl/android.opengl/android/opengl/: EGL15.java  GLES31.java  GLES32.java  JNIHelp.java
src/android.opengl/glgen/: gen
src/android.opengl/glgen/src/: JniCodeEmitter.java
src/android.opengl/glgen/static/egl/: JNIHelp.java
src/android.opengl/glgen/stubs/egl/: EGL14cHeader.cpp  EGL15Header.java-if  EGL15cHeader.cpp  EGLExtcHeader.cpp  eglGetDisplay.cpp  eglGetDisplay.java
src/android.opengl/glgen/stubs/gles11/: GLES20cHeader.cpp  GLES30cHeader.cpp  GLES31ExtcHeader.cpp  GLES31Header.java-if  GLES32Header.java-if  common.cpp  glGetActiveAttrib.java
src/android.opengl/glgen/stubs/jsr239/: GLCHeader.cpp
src/android.opengl/native/: EntryPoints.cpp  JNIHelp.cpp  JNIHelp.h
src/common/: platform.h
src/glgen/nativehelper/: JNIHelp.cpp  JNIHelp.h
src/libANGLE/: Context.cpp
src/tests/easy/: JavaSmokeTest.java  WindowTest.java  native_smoke_test.cpp
